item templates to get a good idea of how things should look

--- a/public/home.html
+++ b/public/home.html
@@ -20,12 +20,12 @@
   <div class="container">
     <form class="searchform">
       <div class="searchbar row">
-        <p>Item Search:</p>
+        <p class="tag">Item Search:</p>
         <input type="text" id="big-search-bar" placeholder="Search for an item...">
       </div>
       <div class="filters row">
         <div class= "filters-item">
-          <p>Category:</p>
+          <p class="tag">Category:</p>
           <select>
             <option value="">All</option>
             <option value="weapon">Weapon</option>
@@ -33,7 +33,7 @@
           </select>
         </div>
         <div class= "filters-item">
-          <p>Sort By:</p>
+          <p class="tag">Sort By:</p>
           <select>
             <option value="Level">Level</option>
             <option value="weapon">Some ID</option>
@@ -41,11 +41,11 @@
           </select>
         </div>
         <div class= "filters-item">
-          <p>Min. Lvl:</p>
+          <p class="tag">Min. Lvl:</p>
           <input type="number" pplaceholder="Level" value="0">
         </div>
         <div class= "filters-item">
-          <p>Max. Lvl:</p>
+          <p class="tag">Max. Lvl:</p>
           <input type="number" placeholder="Level" value="420">
         </div>
       </div>
@@ -60,10 +60,69 @@
     </h2>
   </div>
   <div class="search-results-container">
-    <h2 class="bigtitle">Placeholder lul
-    </h2>
-    <h2 class="bigtitle">Placeholder lul
-    </h2>
+    <div class="item-container">
+      <h2 class="mythic">Bignis</h2>
+      <p class="other-stats">Super Average Attack Speed<br>I guess idk</p>
+      <p class="other-stats"><b class="fire">Fire</b> Damage: 420-666</p>
+      
+      <table class="item-stats">
+        <tr>
+          <td class="left positive">30</td>
+          <td class="center idname">Nuts per second</td>
+          <td class="right positive">130</td>
+        </tr>
+        <tr>
+          <td class="left negative">30%</td>
+          <td class="center idname">Being Bad</td>
+          <td class="right negative">130%</td>
+        </tr>
+      </table>
+      <p class="other-stats">4 Powder Slots</h2>
+      <p class="mythic category">Mythic Bow</h2>
+      <p class="lore">EHfusehfosijfhsoe sefseifhesf llmao this is an some kind of item idk loeoflefolfosefoeslfo</p>
+    </div>
+    <div class="item-container">
+      <h2 class="legendary">Libruh</h2>
+
+      <table class="item-stats">
+        <tr>
+          <td class="left positive">30</td>
+          <td class="center idname"><b class="water">Water</b> succ</td>
+          <td class="right positive">130</td>
+        </tr>
+        <tr>
+          <td class="left negative">30000%</td>
+          <td class="center idname">Being <b class="fire">Fire</b> Bad</td>
+          <td class="right negative">130000%</td>
+        </tr>
+      </table>
+    </div>
+    <div class="item-container">
+      <h2 class="set">Some random item with fixed IDs</h2>
+
+      <table class="item-stats">
+        <tr>
+          <td class="left idname"><b class="water">Water</b> succ</td>
+          <td class="right positive">130</td>
+        </tr>
+        <tr>
+          <td class="left idname">Being <b class="fire">Fire</b> Bad</td>
+          <td class="right negative">130000%</td>
+        </tr>
+      </table>
+    </div>
+    <div class="item-container">
+      <h2>AAAAAAAAA</h2>
+    </div>
+    <div class="item-container">
+      <h2>AAAAAAAAA</h2>
+    </div>
+    <div class="item-container">
+      <h2>AAAAAAAAA</h2>
+    </div>
+    <div class="item-container">
+      <h2>AAAAAAAAA</h2>
+    </div>
   </div>
 </body>
 
