convert to pug, read item array to display on page

--- a/public/home.html
+++ b/public/home.html
@@ -64,7 +64,7 @@
       <h2 class="mythic">Bignis</h2>
       <p class="other-stats">Super Average Attack Speed<br>I guess idk</p>
       <p class="other-stats"><b class="fire">Fire</b> Damage: 420-666</p>
-      
+      <p class="other-stats">Level Req: 2000</p>
       <table class="item-stats">
         <tr>
           <td class="left positive">30</td>
@@ -83,7 +83,7 @@
     </div>
     <div class="item-container">
       <h2 class="legendary">Libruh</h2>
-
+      <p class="other-stats">Level Req: 2000</p>
       <table class="item-stats">
         <tr>
           <td class="left positive">30</td>
